--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@react-three/cannon": "^3.1.2",
     "@react-three/drei": "^7.12.5",
     "@react-three/fiber": "^7.0.7",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.5",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "nanoid": "^3.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.132.2",
-    "nanoid": "^3.1.20",
+    "typescript": "^4.8.4",
     "zustand": "^3.0.3"
   },
   "scripts": {
